test/bad/lambdas/lambda09.px

func f(g: Bool->Void) def
    return

f(_)
